# TicketDot

./: .gitattributes  .gitignore  Dockerfile  LICENSE  LOCAL_DEPLOYMENT.md  PROJECT_OVERVIEW.md  README.md
contract/: Cargo.toml  lib.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  contract-metadata.json  index.css  main.tsx  polyfills.ts  vite-env.d.ts
frontend/src/components/: Header.tsx
frontend/src/contexts/: PolkadotContext.tsx
frontend/src/pages/: CreateEvent.tsx  EventDetails.tsx  Home.tsx  ManageEvents.tsx  MyTickets.tsx
frontend/src/utils/: currency.ts
